refactoring of progressive image loading + fixed hero image staying blurry in some cases

--- a/src/main/web/src/app/home/home.component.scss
+++ b/src/main/web/src/app/home/home.component.scss
@@ -81,10 +81,6 @@
 			filter: blur(10px);
 		}
 
-		-webkit-transition: 0.4s filter ease-in;
-		-moz-transition: 0.4s filter ease-in;
-		-ms-transition: 0.4s filter ease-in;
-		-o-transition: 0.4s filter ease-in;
 		transition: 0.4s filter ease-in;
 	}
 
